update colors, fix FB embed and remove events from Home, remove gap from bottom of router

--- a/src/components/Contact/styles.css
+++ b/src/components/Contact/styles.css
@@ -3,7 +3,7 @@
   color: inherit;
   overflow: auto;
   height: 100%;
-  font-family: 'Open Sans';
+  font-family: 'Raleway';
 }
 
 .Contact a {
