--- a/src/components/Home/styles.css
+++ b/src/components/Home/styles.css
@@ -9,7 +9,7 @@
   font-family: 'Yesteryear';
 }
 .Home h3 {
-  font-family: 'Open Sans';
+  font-family: 'Raleway';
 }
 .Home h4 {
   font-family: 'Roboto';
