--- a/src/components/Router/styles.css
+++ b/src/components/Router/styles.css
@@ -2,8 +2,6 @@
 	height: 80vh;
 	overflow: scroll;
 	margin: auto;
-	/* The image used */
-  background-image: url("../../img/fbcover.jpg");
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
@@ -12,5 +10,6 @@
 }
 ::-webkit-scrollbar {
     width: 0px;  /* remove scrollbar space */
+		height: 0px;  /* remove scrollbar space */
     background: transparent;  /* make scrollbar invisible */
 }
